@@ -1,0 +1,18 @@
+// file      : XSC/SemanticGraph.hpp
+// author    : Boris Kolpackov <boris@dre.vanderbilt.edu>
+// cvs-id    : $Id$
+
+#ifndef XSC_SEMANTIC_GRAPH_HXX
+#define XSC_SEMANTIC_GRAPH_HXX
+
+#include <XSC/SemanticGraph/Attribute.hpp>
+#include <XSC/SemanticGraph/Complex.hpp>
+#include <XSC/SemanticGraph/Element.hpp>
+#include <XSC/SemanticGraph/Elements.hpp>
+#include <XSC/SemanticGraph/Enumeration.hpp>
+#include <XSC/SemanticGraph/Fundamental.hpp>
+#include <XSC/SemanticGraph/Graph.hpp>
+#include <XSC/SemanticGraph/Namespace.hpp>
+#include <XSC/SemanticGraph/Schema.hpp>
+
+#endif  // XSC_SEMANTIC_GRAPH_HXX
