@@ -1,3 +1,9 @@
+2005-08-05  William Otte  <wotte@dre.vanderbilt.edu>
+
+	* XSC/SemanticGraph.hpp
+
+	Added this back into the repository.
+
 Thu Aug  4 11:25:52 2005  Arvind Krishna  <arvindkr@arvindkr.qualcomm.com>
 
 	* Tests/ComplexTypeImport:
